# orbit

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
shaders/: basic.vert  basic.vert.spv  blit.frag  blit.frag.spv  blit.vert  blit.vert.spv  bloom_downsample.comp  bloom_downsample.comp.spv  bloom_upsample.comp  bloom_upsample.comp.spv  brdf_integration.frag  brdf_integration.frag.spv  cluster_gen.comp  cluster_gen.comp.spv  common.glsl  common1.glsl  cubemap_convolution.frag  cubemap_convolution.frag.spv  debug_color.frag.spv  debug_line.frag  debug_line.frag.spv  debug_line.vert  debug_line.vert.spv  debug_mesh.vert  debug_mesh.vert.spv  depth_reduce.comp  depth_reduce.comp.spv  entity_cull.comp  entity_cull.comp.spv  environmental_map_prefilter.frag  environmental_map_prefilter.frag.spv  equirectangular_cube_map.frag  equirectangular_cube_map.frag.spv  forward.frag  forward.frag.spv  forward.vert  forward.vert.spv  forward_depth_prepass.frag  forward_depth_prepass.frag.spv  forward_depth_prepass.vert  (+44 more)
shaders/bloom/: bloom_downsample.comp  bloom_downsample.comp.spv  bloom_upsample.comp  bloom_upsample.comp.spv
shaders/debug/: debug_color.frag  debug_color.frag.spv  debug_line.vert  debug_line.vert.spv  debug_mesh.vert  debug_mesh.vert.spv
shaders/egui/: egui.frag  egui.frag.spv  egui.vert  egui.vert.spv
shaders/env_map/: cubemap_convolution.frag  cubemap_convolution.frag.spv  environmental_map_prefilter.frag  environmental_map_prefilter.frag.spv  equirectangular_cube_map.frag  equirectangular_cube_map.frag.spv
shaders/forward/: forward.frag  forward.frag.spv  forward.mesh  forward.mesh.spv  forward.task  forward.task.spv  forward.vert  forward.vert.spv  forward_common.glsl  forward_depth_prepass.frag  forward_depth_prepass.frag.spv  forward_depth_prepass.mesh  forward_depth_prepass.mesh.spv  forward_depth_prepass.task  forward_depth_prepass.task.spv  forward_depth_prepass.vert  forward_depth_prepass.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
shaders/hbao/: hbao.comp  hbao.comp.spv
shaders/include/: common.glsl  functions.glsl  types.glsl
shaders/light_cluster/: active_cluster_compaction.comp  active_cluster_compaction.comp.spv  cluster_common.glsl  cluster_gen.comp  cluster_gen.comp.spv  light_culling.comp  light_culling.comp.spv  mark_active.comp  mark_active.comp.spv
shaders/shadow/: shadow.frag  shadow.frag.spv  shadow.mesh  shadow.mesh.spv  shadow.task  shadow.task.spv  shadow.vert  shadow.vert.spv
shaders/ssao/: ssao.comp  ssao.comp.spv  ssao_blur.comp  ssao_blur.comp.spv
shaders/utils/: blit.vert  blit.vert.spv  brdf_integration.frag  brdf_integration.frag.spv  unit_cube.vert  (+1 more)
src/: app.rs  assets.rs  camera.rs  egui_renderer.rs  gltf_loader.rs  input.rs  main.rs  math.rs  mesh.rs  scene.rs  time.rs  utils.rs
(+49 files in other folders)
