[package]
name = "orbit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.gltf]
opt-level = 3

[dependencies]
# logging
log = "0.4.18"
log-panics = "2.1.0"
env_logger = "0.10.0"

winit = "0.28.6"
ash = "0.37.3"
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
gpu-allocator = "0.22.0"
cstr = "0.2.11"
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24.0", features = ["bytemuck"] }
egui = "0.22.0"
egui-winit = "0.22.0"
puffin = "0.16.0"
puffin_egui = "0.22.0"
tobj = "4.0.0"
gltf = "1.2.0"
image = "0.24.6"

