[package]
name = "orbit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.gltf]
opt-level = 3

[dependencies]
# logging
log = "0.4.18"
log-panics = "2.1.0"
env_logger = "0.10.0"

winit = "0.28.7"
ash = "0.37.3"
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
gpu-allocator = { version = "0.24.0", features = ["visualizer"] }
cstr = "0.2.11"
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24.0", features = ["bytemuck"] }
egui = "0.23.0"
egui-winit = "0.23.0"
puffin = "0.17.0"
puffin_egui = "0.23.0"
tobj = "4.0.0"
gltf = "1.2.0"
image = "0.24.6"
ddsfile = "0.5.1"
onlyargs = "0.1.2"
onlyargs_derive = "0.1.2"
rand = "0.8.5"
ordered-float = "4.1.1"
rayon = "1.8.0"
parking_lot = "0.12.1"
smallvec = "1.11.2"
meshopt = "0.2.0"
num-integer = "0.1.45"
bevy_mikktspace = "0.12.1"

[target.'cfg(windows)'.dependencies]
# only used to get monitor name, because winit's implementation only gets the monitor GDI
windows = { version = "0.52.0", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Devices",
    "Win32_Devices_Display",
] }
